元音字母 and 添加练习文件

--- a/primary school/01.md
+++ b/primary school/01.md
@@ -1,3 +1,4 @@
+5个元音字母：a  e  i  o  u
 ### 1.book 书
 I wrote a book  我写了一本书
 I 我；个人
@@ -78,6 +79,10 @@ my lover 我的爱人
 她    she    her   her   hers   herself
 它    it     it    its   its    itself
 他/它们 they them their theirs themselves
+
+> 上面 名词性 指的是  名词性所有格
+
+
 
 ### 18.dog [名] 狗  [动] 尾随
 The police dog the suspect. 警察跟踪嫌疑犯。
