--- a/primary school/01.md
+++ b/primary school/01.md
@@ -70,7 +70,7 @@ He is a very attractive man.  他是一个很有魅力的男人
 all my life 我的一生
 my lover 我的爱人
 
-代词   主格  宾格  所有格  名词性  反身代词
+代词   主格  宾格  形容词性  名词性  反身代词
 我     I     me    my    mine   myself 
 我们   we    us    our   ours   ourselves
 你    you    you   your  yours  yourself
@@ -80,9 +80,19 @@ my lover 我的爱人
 它    it     it    its   its    itself
 他/它们 they them their theirs themselves
 
-> 上面 名词性 指的是  名词性所有格
-
-
+> 上面 名词性、形容词性 分别指的是  名词性所有格和形容词性所有格
+#### 人称分类
+1. 第一人称：指交谈时自己这一方。自己这方只有一人，称为“我” [第一人称单数]；有两个或两个以上，称为“我们”[第一人称复数]。
+2. 第二人称：即交谈时的对方。对方只有一个人，称为“你”[第二人称单数]；有两个或两个以上，称为“你们”[第二人称复数]。
+3. 第三人称：即不参加与交谈对话的第三方。 指不参与对话的一方，称为“他”、“她”、“它”[第三人称单数]，两个或两个以上的人或物称为“他们”、“她们”、“它们”[第三人称复数]
+#### 动词和人称的关系
+以谓语动词为参照物，人与动词的关系，分成三类：
+1、动作的发出者 --- 主格 I
+2、动作的接受者 --- 宾格 me
+3、和动作没有关系 --- 所有格 my
+#### 解释所有格
+“所有格”my 我的，动词与所有格 没有任何关系，所有格修饰一个名词（人或物），必须与人或物一起，以词组的方式出现在句子中。
+所有格后面跟的人或物，才是动作的发出者或者接受者。
 
 ### 18.dog [名] 狗  [动] 尾随
 The police dog the suspect. 警察跟踪嫌疑犯。
