--- a/primary school/01.md
+++ b/primary school/01.md
@@ -104,3 +104,146 @@ little bird 小鸟
 
 ### 20.tiger [名] 老虎
 The tiger is dangerous.  老虎是危险的
+
+### 21.monkey [名] 猴子
+little monkey   小猴子
+Monkey loves bananas. 猴子喜欢香蕉
+
+### 22.cat [名] 猫
+I like that lovely cat.  我喜欢那只可爱的小猫.
+That cat looks like a tiger. 那只猫看起来像只老虎。
+
+### 23.what [代] 什么
+ what do you want? 你想要什么？
+ what time is is? 几点了？
+ 
+- 特殊疑问词
+    - 疑问代词：who whom whose what which
+    - 疑问副词：when where how why
+
+### 24.it [代] 它
+Just do it! 就这么干吧
+It is good. 它不错
+
+### 25.one [数] 一
+all in one. 多合一
+only one. 仅仅一个
+### 26.two [数] 二
+He has two pens.  他有两支笔。
+two books  两本书
+### 27.three [数] 三
+three times a week  每星期三次
+
+### 28.four [数] 四
+There are four people the room. 房间里面有四人
+
+### 29.five  [数] 五
+Five minus three is two. 五减三等于二
+
+- 扩展
+give me five 击掌
+take five 休息五分钟
+
+### 30.six  [数] 六
+get up at six o'clock   在六点钟起床
+six hours 六个小时
+
+### 31.seven [数] 七
+Two plus five is seven. 二加五等于七
+seven months 七个月
+> "赛文"，赛文奥特曼是奥特曼警备队的第“七”名成员。
+### 32.eight [数] 八
+It is eight o'clock now. 现在八点钟了。
+group of eight 八国集团
+
+### 33.nine [数] 九
+There are nine students. 有九个学生
+### 34.ten [数] 十
+That boy is ten years old. 那个男孩十岁。
+ten days  十天
+
+### 35.how [副] 如何; 怎样；多么
+How old is he? 他多大年纪
+Please instruct me how to do my book. 请指导一下我如何工作。
+
+### 36.many [形] 许多的 [代] 许多人或物
+There are many animals in a zoo. 动物园里有许多动物。
+many people 很多人
+
+### 37.are [动] 是
+They are happy. 他们很高兴
+You are so kind. 你真善良
+
+### 38.there [副] 在那里
+Go there. 去那里
+We will be there tomorrow. 我们明天就到那里。
+### 39.black [形] 黑色的  [名] 黑色
+black car. 黑色的汽车
+He has a black horse. 他有一匹黑马
+
+- 扩展
+blank 空白的
+
+### 40.yellow [形] 黄色的  [名] 黄色
+I like yellow. 我喜欢黄色
+yellow light. 黄灯
+
+### 41.blue [形] 蓝色的；忧郁的  [名] 蓝色
+The sky is blue. 天空是蓝色的
+The bad weather makes me blue. 坏天气使我很忧郁
+
+### 42.red [形] 红的  [名] 红色
+red apple 红苹果
+red light 红灯
+
+### 43.green [形] 绿色的；未熟的；无经验的  [名] 绿色；绿色物品
+green pea 青豌豆
+He was dressed all in green. 他全身绿装
+The young man is green and immature. 这个年轻人没有经验且不成熟。
+
+### 44.colour [名] 颜色  [动] 着色
+The colour of her hair is black. 她的头发的颜色是黑色的。
+colour of the sky. 天空的颜色。
+
+英式 colour
+美式 color
+
+### 45.apple [名] 苹果
+Please cut the apple. 请把这个苹果切了。
+The apple is red. 这个苹果是红色的。
+
+### 46.pear [名] 梨子
+Would you like a pear? 你想要一个梨吗？
+eat a pear 吃一个梨
+
+### 47.banana [名] 香蕉
+The banana is her favorite fruit. 这种香蕉是她最喜欢的水果。
+Please peel this banana. 请把这个香蕉削皮
+
+### 48.orange [形] 橙色的 [名] 橙色；橙子
+an orange tree. 橙子树
+eat an orange. 吃一个橙子
+
+### 49.do [动] 做
+What are you trying to do? 你试图想要做什么？
+do your homework. 做你的家庭作业
+> 第一、二人称用do，第三人称单数用does，一般疑问句do或does放句首。
+
+### 50.you [代] 你；你们
+You help me alot! 你帮我大忙了！
+See you！再见
+
+### 51.like [动] 喜欢 [介] 像
+That cat looks like a tiger. 那只猫看起来像只老虎。
+would like to do  想要做...
+
+### 52.yes [副] 是  [名] 是
+Yes, I remember. 是的，我记得
+yes or no 是或不是
+
+> 点头yes，摇头no，来是come，去是go.要打招呼喊hello
+
+### 53.no [形] 没有；不  [副] 不；不是
+No comment！无可奉告！
+No Problem! 没问题
+No Smoking! 禁止吸烟
