--- a/primary school/02.md
+++ b/primary school/02.md
@@ -107,3 +107,85 @@ I'm not sure. 我不确定
 feel sorry for somebody  因某人有困难而感到难过
 Sorry,I'm late. 对不起，我来晚了
 I'm sorry! 对不起；很遗憾！
+
+### 77.rice [名] 米饭
+cook rice 煮饭
+He had some rice. 他吃了一些米饭
+
+- 扩展
+    race 竞赛
+
+### 78.noodles [名] 面条
+a bowl of noodles. 一碗面条
+Eat the noodles. 吃面吧
+
+### 79.vegetable [名] 蔬菜
+I love the vegetable. 我喜欢蔬菜
+fresh vegetable  新鲜的蔬菜
+
+### 80.fish [名] 鱼
+I want to learn how to fish. 我想学习怎么钓鱼。
+catch fish  捉鱼
+
+### 81.chicken [名] 鸡肉
+carve the chicken 切鸡肉
+
+### 82.egg [名] 鸡蛋
+cook an egg  煮一只鸡蛋
+eat on egg 吃一只鸡蛋
+
+### 83.hungry [形] 饥饿的；渴望的
+I'm hungry after my long work.  长时间工作之后，我饿了
+to be hungry for knowledge  渴望求和
+
+### 84.want [动] 想要 [名] 缺乏
+a want of charm  缺乏魅力
+
+### 85.and [连] 和；与
+food an drink 饮食
+and how 的确
+
+### 86.juice [名] 果汁
+I want a glass of juice. 我想要一杯果汁
+
+### 87.tea [名] 茶；茶叶；茶水
+Will you have tea of coffee? 你喝茶还是喝咖啡
+import tea 进口茶叶
+
+### 88.milk [名] 奶  [动] 挤奶
+to milk the people  压榨人民
+
+### 89.water [名] 水 [动] 给...浇水
+to water the flowers  浇花
+hot water 热水
+
+### 90.thirsty [行] 口渴的；渴望的
+He was thirsty for power. 他渴望拥有权力
+He became thirsty from running. 他跑的口渴了
+
+### 91.thanks [叹] [动] 谢谢  [名] 感谢 
+He thanks me for my help. 他感谢我的帮助
+
+### 92.shirt [名] 衬衫
+wear a shirt 穿衬衫
+This shirt is too big for me. 这件衬衫我穿太大。
+
+### 93.T-shirt [名] T恤衫
+
+### 94.skirt [名] 裙子  [动]  位于...的边缘；绕着...走；避开
+We decided to skirt round the town center. 我们决定要绕过市中心
+She wore a skirt 她穿着一件裙子
+
+### 95.dress [名] 连衣裙；衣服 [动] (给...) 穿衣服
+a red dress 一条红色连衣裙
+My son can dress himself. 我儿子会自己穿衣服了。
+
+### 96.socks [名] 袜子；短袜
+a pair of socks. 一双短袜
+
+### 97.shorts [名] 短裤
+a pair of shorts 一条短裤
+
+### 98.your [代] 你的；你们的
+Tie your shoes. 把你的鞋带系上
+your brother. 你的哥哥
