--- a/primary school/03.md
+++ b/primary school/03.md
@@ -103,3 +103,102 @@ Happly New Year! 新年快乐
 ### 126.does [动] 做；”do“ 的第三人称单数形式
 Does he want an apple? 他要苹果吗？
 Tell me what she does? 告诉我她是干什么的？
+
+### 127.bookshop [名] 书店
+I owned a bookshop  我拥有一家书店
+
+### 128.zoo [名] 动物园
+There are many animals in a zoo. 动物园里有许多动物
+visit a zoo  参观动物园
+go to the zoo. 去动物园
+
+### 129.school [名] 学校 [动] 教育
+school bus  校车
+He should be schooled with his peers. 他应该跟同龄人一样接受教育
+
+### 130.supermarket [名] 超市；超级市场
+go shopping in the supermarket. 去超市购物
+Buy some oil from the supermarket. 从超市里买点油回来
+
+### 131.park [名] 公园；停车场 [动] 停放；停车
+You are not allowed to park here. 此处不准停车
+
+### 132.hospital [名] 医院
+She works as a nurse in a hospital. 她在医院里当护士
+
+### 133.go [动] 走；去
+go to the cinema. 去看电影
+
+### 134.to [介] 到；向；至；对于
+Welcome to China! 欢迎到中国来
+Nice to meet you! 很高兴见到你
+
+### 135.grass [名] 草；草地；大麻；告密者  [动] 使吃草；放牧；告发
+The grass told who the drug dealer was. 告密者说出了谁是毒贩
+to smoke grass  吸食大麻
+The sheep are eating grass. 绵羊在吃草
+
+### 136.tree [名] 树；树木
+tall tree 高树
+There is a tree in front of the house. 房子前面有一颗树
+
+### 137.flower [名] 花；花朵
+How beautiful the flower is! 那朵花多漂亮啊！
+the flower show  花展
+
+### 138.boat [名] 小船  [动]划船；用船运输；用船装运
+row a boat  划船
+to boat the cargo  用船运输货物
+
+### 139.lake [名] 湖；湖泊
+Wow! What a beautiful lake! 哇！多美的湖啊！
+
+### 140.hill [名] 丘陵；小山
+the foot of a hill  小山的山脚
+
+### 141.Christmas [名] 圣诞节
+Christmas tree  圣诞树
+
+### 142.Father Christmas [名] 圣诞老人
+Father Christmas brings presents to children. 圣诞老人给孩子们带来礼物
+
+### 143.Chistmas tree [短语] 圣诞树
+
+### 144.card [名] 卡片；纸牌；银行卡
+bank card 银行卡
+Please send me a card  请寄一张明信片来
+credit card 信用卡
+
+### 145.present [名] 目前；礼物 [形] 在场的；目前的  [动] 呈现；提出
+He will be present at the meeting. 他将出席会议
+I am not satisfied with the present situation. 我对现状不满意
+
+### 146.New Year [名] 新年；元旦
+Happly New Year  新年快乐
+Happy New Year to you all.  祝福大家新年好
+
+### 147.merry [形] 欢乐的
+A merry Christmas to you! 祝你圣诞节快乐
+
+### 148.too [副] 也；过于
+I love you, too.  我也爱你
+too fast  太快了
+too much  太多了
+
+### 149.here [副]这里
+Come here 到这里来
+I live here  我住在这里
+
+### 150.for [介] 为；给；因为  [连] 因为；由于
+Something fell in, for I heard a splash. 有东西掉进去了，因为我听见扑通一声
+It is good for you. 它对你有好处
+for example 例如
+
+### 151.thank [动] 谢谢
+You needn't thank me.  你不必谢我
+Thank God. 谢天谢地
+Thank you. 谢谢你
+
+### 152.happy [形] 快乐的；高兴的
+They have a happy marriage. 他们的婚姻很美满
+happy childhood.  快乐的童年
