--- a/primary school/04.md
+++ b/primary school/04.md
@@ -96,4 +96,97 @@ Apples are his favourite. 他特别喜爱苹果
 Autumn is a season for harvest. 秋天是一个收获的季节
 I season beef with curry. 我用咖啡给牛肉调味
 
-### 179.
+### 179.eleven [数] 十一
+eleven o'clock  十一点钟
+
+### 180.twelve [数] 十二
+twelve months 12个月
+
+### 181.thirteen [数] 十三
+thirteen feet 13英尺
+
+### 182.fourteen [数] 十四
+fourteen hours 14小时
+
+### 183.fifteen [数] 十五
+fifteen minutes 十五分钟
+### 184.twenty [数] 二十
+He's twenty years old. 他二十岁
+
+### 185.thirty [数] 三十
+A month has thirty days. 一个月有三十天
+thirty - five  三十五
+
+### 186.forty [数] 四十
+forty minutes 四十分钟
+
+### 187.fifty [数] 五十
+He is fifty years old. 他五十岁了
+
+### 188.time [名] 时间；倍；次数；时期  [动] 计时；安排时间  [形] 时间的；定时的；分期的
+a time payment  分期付款
+a time bomb 一枚定时炸弹
+next time 下一次
+
+### 189.playtime [名] 游戏时间；娱乐时间；课间
+The chilren are outside during playtime. 在娱乐时间学生都在室外活动。
+Is playtime? No, it's bedtime. 是做游戏的时间吗？不是，是睡觉的时候了。
+
+### 190.get up [短语] 起床
+I get up in the morning. 我早上起床
+I used to get up early. 我过去常常很早起床
+
+### 191.eat breakfast  [短语] 吃早餐
+It is time to eat breakfast  该是吃早饭的时间了
+What time does he eat breakfast? 他几点吃早饭？
+
+### 192.go to school [短语] 上学
+When do you go to school? 你几点去学校
+Let's go to school. 我们去学校吧
+
+### 193.eat lunch [短语] 吃午饭
+She had no time to eat lunch. 她没有时间吃午餐
+
+### 195.eat dinner [短语] 吃完饭
+Before I eat dinner,I read the newspaper. 在吃晚饭之前，我看报纸
+
+### 196.when [副] 什么时候  [连] 在...时候
+When will we go? 我们什么时候走？
+at the time when we meet  在我们见面的时候
+
+### 197.every day [短语] 每天；天天
+I go to school every day. 我每天都去上学
+
+### 198.at [介] 朝；向；在（某处）
+at home  在家
+She is laughing at me. 她在嘲笑我
+
+### 199.sunday [名] 星期日
+on Sunday 在星期天
+every Sunday 在每个星期天
+
+### 200.monday [名] 星期一
+last Monday 上星期一
+Monday comes after Sunday. 星期天之后便是星期一
+
+### 201.Tuesday [名] 星期二
+School will begin next Tuesday 下星期二将要开学
+
+### 202.wednesday [名] 星期三
+What day is today? It's Wednesday. 今天是星期几？今天是星期三。
+
+### 203.thursday [名] 星期四
+we can't go until Thursday. 我们要到星期四才能去
+on Thursday 在星期四
+
+### 204.friday [名] 星期五
+They reached London on Friday. 他们星期五到达伦敦
+Friday evening 星期五晚上
+
+### 205.saturday [名] 星期六
+busy saturday 繁忙的星期六
+They attended class on Saturday. 他们星期六上课
+
+### 206.today [名] 今天；当今  [副] 在今天；当今
+Today is Thursday. 今天是星期四
+Today is sunny. 今天阳光明媚
