--- a/primary school/05.md
+++ b/primary school/05.md
@@ -126,4 +126,125 @@ a can of cola  一罐可乐
 ### 241.buy [动] 买；换取；收买；相信
 I am going to buy some apples. 我要去买点苹果。
 
-### 242.
+### 242.duck [名] 鸭；鸭肉  [动]没入水中；潜入；闪避
+Don't try to duck cleaning up the kitchen. 别逃避打扫厨房
+I duck my head in the stream to get cool. 我把头扎到水里凉爽凉爽
+
+### 243.rabbit [名] 兔子
+rabbit ears  兔子耳朵
+to run like a rabbit  像兔子一样跑
+
+### 244.pet [名] 宠爱；宠儿 [动] 爱抚  [形] 钟爱的
+a pet cat 宠物猫
+He keeps a monkey as a pet. 他把猴子当宠物
+
+### 245.snake [名] 蛇  [动]蛇形；曲折前行
+to snake forward 向前迂回前行
+The snake is dangerous  这条蛇很危险
+
+### 246.turtle [名] 龟；海龟
+A turtle lays many eggs at one time. 海龟一次生很多蛋
+
+### 247.small [形] 小的
+small mouth 小嘴巴
+he has a small nose 他长着一个小鼻子
+
+### 248.long [形] 长的；长时间的 [副] 长久的；始终 [名] 长时间的；长期 [动] 渴望；热望
+I can't stay long. 我不能待太久
+long long ago 很久很久之前
+
+### 249.look for [短语] 寻找
+We can look for a solution! 我们能寻找个解决方案
+We must look for somewhere to live. 我们必须找个地方住下
+
+### 250.tail [名] 尾巴；尾随者 [动] 跟踪
+to tall after the leader  跟在领导的后面
+
+### 251.dance [名] 舞蹈 [动] 跳舞
+Will you dance with me? 你愿意和我跳舞吗
+
+### 252.cap [名] 帽子 [动] 覆盖...的顶部
+baseball cap 棒球帽
+This is the cap of my fountain pen. 这是我的钢笔的笔套
+the cap on the bottle  瓶盖
+
+### 253.coat [名] 大衣；外衣  [动]给...穿上外衣；覆盖
+to coat oneself 给自己穿上外衣
+to coat the pond with thin ice 以薄冰覆盖池塘面
+
+### 254.sweater [名] 毛衣
+a blue sweater 一件蓝色毛衣
+wear a sweater 穿毛衣
+
+### 255.jacket [名] 夹克衫
+your jacket is so cool  你的夹克衫真酷
+
+### 256.gloves [名] 手套
+a set of gloves 一副手套
+The gloves are on the table. 手套在桌子上
+
+### 257.trousers [名] 裤子；长裤
+He wore a pair of black trousers. 他穿着一条黑色裤子
+
+### 258.should [助动] 应该；应当；”shall“的过去式
+You should tell me. 你应该告诉我
+
+### 259.wear [动] 穿；戴 [名] 衣着；磨损
+People wear coats to keep warm. 人们穿大衣来保暖
+
+### 260.week [名] 周；星期；礼拜
+How much do you earn per week? 你每周挣多少钱
+
+### 261.soon [副] 很快；不久
+Supper will be ready soon 完饭马上就好
+
+### 262.look forward to [短语] 展望；期待
+I look forward to seeing you soon. 我希望能很快再次见到你。
+
+### 263.January [名] 一月
+On January 1 st,the new year begins. 1月1日新年开始了
+
+### 264.February [名] 二月
+in last February 去年二月
+
+### 265.March [名] 三月
+They reached Beijing on March 17.  他们于三月十七日到达北京
+
+### 266.April [名] 四月
+After April is May. 四月过后是五月
+
+### 267.May [名] 五月
+May is the fifth month of the year. 五月是一年里的第五个月
+
+### 268.June [名] 六月
+I will not leave on June 1st. 我不会在六月一号离开
+
+### 269.July [名] 七月
+July was not hot this year. 今年的7月不热。
+
+### 270.August [名] 八月
+Tourism is at its peak in August.
+
+### 271.September [名] 九月
+The temperature drops in September. 气温在九月间下降。
+
+### 272.October [名] 十月
+Leaves begin to fail in October. 十月里树叶下开始落下
+
+### 273.November [名] 十一月
+They will get married in November. 他们十一月要结婚
+
+### 274.December [名] 十二月
+My little daughter was born in December. 我的小女儿是十二月出生的。
+
+### 275.birthday [名] 生日
+Today is my birthday 今天是我生日
+
+### 276.first [名] 第一  [形] 第一的 [副] 第一；首先
+first class  头等舱
+
+### 277.party [名]聚会；政党
+a birthday party  一场生日派对
+
+### 278.delicious [形] 美味的，可口的
+The soup is delicious. 汤的味道美极了
