--- a/primary school/02.md
+++ b/primary school/02.md
@@ -62,7 +62,7 @@ My aunt lives near.  我姑姑住的很近
 It's near the door. 它在门的旁边
 
 - 联想
-    你n的耳朵ear太靠近我了。
+    你(n)的耳朵(ear)太靠近我了。
 
 ### 67.behind [介] 在...后面  [副] 在后面
 Come on or we'll be left behind. 快，不然我们就掉队了
