--- a/primary school/06.md
+++ b/primary school/06.md
@@ -111,3 +111,117 @@ Please wake me up at six. 请在六点钟叫醒我
 
 ### 308.be back [短语] 回来
 I'll be back in a few days.  过几天我会再来
+
+### 309.family [名] 家庭；家族；（动、植物的）科；（语言的）族、系  [形] 家庭的；家族的
+The tiger belongs to the cat family. 老虎属于猫科动物
+family business 家族企业
+
+### 310.uncle [名] 叔父；伯父；舅父；姑父；姨夫
+I visit my uncle. 我看望我的叔叔
+
+### 311.aunt [名] 姑；婶；姨；伯母
+My aunt brought up four children. 我姨妈养了四个孩子
+
+### 312.cousin [名] 堂兄弟（或姐妹）；表兄弟（或姐妹）
+I had a letter from my cousin. 我收到堂弟寄来的信
+a distant cousin 一个远房堂兄弟
+
+### 313.beautiful [形] 漂亮的
+Wow! What a beautiful lake! 哇！多漂亮的湖啊
+very beautiful flowers  非常漂亮的花
+
+### 314.lost [形] 丢失的  [动] 丢失；输；”lose“的过去式和过去分词
+He lost his way. 他迷路了
+He lost out in the game. 他比赛失败了
+- 联想
+    lose 失去；输
+
+### 315.water bottle [短语] 水瓶；水袋；水壶
+
+### 316.know [动] 知道
+I know that is true. 我知道那是真的
+Do you know? 你知道吗
+
+### 317.much [副] 非常地 [形] 多；许多  [代] 许多
+How much money do you have?  你有多少钱
+Thank you very much! 非常感谢
+
+### 318.welcome [名] [动] [叹] 欢迎
+Welcome to China! 欢迎来到中国
+
+### 319.cooking dinner [短语] 做饭；做晚餐
+His wife was cooking dinner. 他的妻子正在烧饭
+
+### 320.walking the dog [短语] 遛狗
+She is walking the dog  她在遛狗
+
+### 321.watering the plants [短语] 给植物浇水
+She is watering the plants. 她正在给她的植物浇水
+
+### 322.cleaning the room [短语] 打扫房间
+I was cleaning the room. 我正在打扫房间
+while cleaning the room. 打扫房间的时候
+
+### 323.listening to music [短语] 听音乐
+I like reading and listening to music  我喜欢阅读和欣赏音乐
+
+### 324.watching TV [短语] 看电视
+He was watching TV 他在看电视
+
+### 325.feeding the fish [短语] 给鱼喂食
+I like feeding the fish  我喜欢喂鱼
+while feeding the fish 喂鱼的时候
+
+### 326.play with [短语] 与...一起玩
+play with dogs 和狗一起玩
+
+### 327.in one hour [短语] 一小时之内；一小时之后
+We'll be back in one hour. 我们一小时后回来
+sleeping in one hour. 睡一小时
+
+### 328.everyone [代]每个人；人人
+Everyone knows it. 大家都知道这件事
+Everyone must obey the law. 人人都必须遵守法律
+
+### 329.children [名] 儿童；小孩；”child“ 的复数
+The children like candy. 孩子们喜欢糖果
+The children played in the sunshine. 孩子们在阳光下玩耍
+
+### 330.run [动] 跑步；经营  [名] 跑；运转
+He can run very fast. 他能跑的非常快
+run a company 运营一间公司
+
+### 331.home [名] 家；家庭 [副]在家 [形]家的；家庭的 [动]送...回家；提供住处
+at home 在家
+What is your home address? 你家的地址是什么？
+
+### 332.bedroom [名] 卧室
+Go to the bedroom  去卧室
+We sleep in the bedroom  我们在卧室睡觉
+
+### 333.living room [短语] 客厅；起居室
+You can see a living room. 你能看见一间可疼
+How big is your living room? 你的起居室有多大
+
+### 334.bathroom [名] 浴室
+The bathroom needs to be cleaned. 浴室需要清洁一下了
+
+### 335.dining room [短语] （家里或宾馆的）餐厅
+They are having dinner in the dining room. 他们正在餐厅里吃晚饭
+
+### 336.study [动] 学习；研究 [名] 学习；研究；书房
+There are many books in the study. 书房里有很多书
+She made progress in the study  她在学习方面取得了进步
+
+### 337.kitchen [名] 厨房
+We have a fridge in our kitchen  我们厨房里有一台冰箱
+a tidy kitchen 一个整洁的厨房
+
+### 338.for rent [短语] 供出租
+Do you have a room for rent? 你们有房子出租吗？
+
+### 339.sofa [名] 沙发
+She sat on the sofa. 她坐在沙发上
+She lay on the sofa. 她躺在沙发上
+
+### 340.
