--- a/primary school/07.md
+++ b/primary school/07.md
@@ -187,3 +187,150 @@ I will wait until they come. 我会等到他们来为止
 
 ### 391.enjoy [动] 享受；享有；喜爱
 I enjoy writing  我喜欢写作
+
+### 392.pen [名] 钢笔；笔；围栏
+Give me a pen. 给我一支笔
+Put down my pen. 放下我的钢笔
+
+### 393.knife [名] 刀
+That is a useful knife. 那是把有用的小刀
+
+### 394.eraser [名] 橡皮擦
+Can I borrow your eraser? 我能借一下你的橡皮擦吗？
+I have an eraser. 我有一块橡皮擦
+
+### 395.crayon [名] 蜡笔
+The boy draws in crayon. 这个男孩用蜡笔画画
+Can I borrow your crayon? 我能借一下你的蜡笔吗？
+
+### 396.scissors [名] 剪刀
+These scissors are very sharp. 这几把剪刀很锋利
+He handed me a pair of scissors. 他递给我一把剪刀
+
+### 397.glue stick [短语] 固体胶
+You will need a glue stick. 你要用到固体胶
+Do you have a glue stick? 你有固体胶吗？
+
+### 398.paper [名] 纸；报纸；论文；试卷  [动] 用墙纸贴
+to paper the wall  在墙壁上贴墙纸
+Please finish your paper as soon as possible. 请尽快完成你的论文
+
+### 399.use [动] 使用；利用 [名]使用；用途
+Use your head! 你动动脑
+How do you use a telephone? 你怎样使用电话？
+
+### 400.please [叹] 请  [动] 使欢喜；取悦
+Call me please. 请打给我
+
+### 401.find [动] 找；找到；发现；认为
+I can't find my cat. 我找不到我的猫了
+find out 发现；查明
+
+### 402.Information Centre  [名] 情报中心
+Hong Kong is also an information centre. 香港也是一个咨询中心。
+
+### 403.Excuse me [叹] 抱歉；麻烦
+Excuse me, where is the hall? 打扰一下，请问大厅在哪里？
+Excuse me, Where's the escalator? 打扰一下，请问电动扶梯在哪？
+
+### 404.phone [名] 电话  [动] 打电话
+Will you phone me? 你会给我打电话吗？
+
+### 405.hamburger [名] 汉堡包
+Would you like a hot dog or hamburger? 您要热狗还是汉堡包？
+
+### 406.shop [名] 商店  [动] 购物
+The white rabbits are in a pet shop. 这些白色的兔子在宠物商店里
+This shop sells clothes. 这家商店出售服装
+
+### 407.climb on the window ledge [短语] 爬上窗台
+Don't let the cat climb on the window ledge. 不要让猫爬上窗台
+
+### 408.dangerous [形] 危险的
+It's dangerous to stay here any longer. 再在这里待下去很危险
+a dangerous animal  一种危险的动物
+
+### 409.play with fire  [短语] 玩火
+Don't let your child play with fire. 别让你的小孩子玩火
+
+### 410.Be careful [短语] 注意 当心  小心
+Be careful A car is coming  当心  有车过来了
+
+### 411.run down the stairs [短语] 跑下楼梯
+Don't run down the stairs. 下楼梯时不要跑
+
+### 412.sidewalk [名] 人行道
+This sidewalk is made of stone. 这人行道是用石头辅成的。
+She is a sidewalk sweeper. 她是一个人行道的清扫工人
+
+### 413.wait for [短语] 等待
+to wait for a bus  等公共汽车
+
+### 414.safe [形] 安全的
+I can guarantee you are quite safe now. 我能保证你现在很安全
+
+### 415.stop [动] 停止；阻止 [名] 停止；阻止；车站；停留
+I am getting off at the next stop. 我在下一站下车。
+
+### 416.street [名] 大街；街道
+He stood in a strange street. 他站在一条陌生的道路上
+
+### 417.safety rule [短语] 安全规则
+I learmed a new safety rule today. 我今天学了一个新的安全规则
+
+### 418.nurse [名] 护士；保姆  [动] 护理；照料；喂奶
+She needs to nurse her son back to health. 她要照顾儿子回复健康
+
+### 419.cook [名] 厨师 [动]烹饪
+cook an egg 煮一只鸡蛋
+cook rice 煮饭
+
+### 420.doctor [名] 医生；博士
+go to the doctor 去看医生
+
+### 421.bus driver [短语] 公交车司机
+I am a student, not a bus dirver. 我是个学生，不是公交车司机
+
+### 422.police officer [短语] 警官；官员
+The bullet hit the police officer in the shoulder. 枪射中了警官的肩膀
+
+### 423.taxi driver [名] 出租车司机
+The taxi driver took me to the airport. 出租车司机把我送到了机场
+
+### 424.farmer [名] 农民
+The farmer gets up early. 农夫起得很早
+
+### 425.worker [名] 工人；工作者；劳动者
+dismiss a worker  解雇工人
+
+### 426.in the future [短语] 在将来；日后
+It may change in the future. 未来有可能发生变化
+
+### 427.great [形] 伟大的；大的；极好的  [副] 很好的
+You're doing great! 你做得很好
+a great amount of time and money  大量的时间和金钱
+
+### 428.job [名] 工作
+I like my job. 我喜欢我的工作
+
+### 429.sick [形] 生病的；不舒服的；恶心的
+She feels sick in buses. 她在公共汽车上觉得很恶心
+
+### 430.people [名] 人们；人；人民
+There are four people in the room. 房间里面有四人
+a lot of people. 许多人
+
+### 431.teach [动] 教；教导
+I teach her to ride a bicycle. 我教她骑自行车
+teach a student 教一个学生
+
+### 432.just [副] 只是；就；仅仅；刚刚；恰好  [形] 公正的；正当的；合理的
+Just do it! 想做就做
+just a little 只是一点点
+
+### 433.myself [代] 我自己
+I can do it for myself  我自己能做这件事
+
+### 434.sound [名] 声音；声响  [动] 响；听起来  [形] 健全的；完好的；合理的；可靠的；酣睡的
+He is sound asleep. 他睡的很香
+You sound a little sad. 你听起来有点伤心
