practice修改,改成03.md的错误

--- a/primary school/03.md
+++ b/primary school/03.md
@@ -20,7 +20,7 @@ elder sister 姐姐
 ### 103.grandmother [名] 祖母；外祖母
 grandfather and grandmother. 祖父和祖母
 
-### 104.grandmother [名] 祖父；爷爷
+### 104.grandfather [名] 祖父；爷爷
 grand (极重要的) adj. 显赫的；豪华的；隔代的
 
 ### 105.who [代] 谁
@@ -77,12 +77,12 @@ Tea of Coffee? 茶还是咖啡?
 ### 119.big [形] 大的
 This shirt is too big for him. 这件衬衫他穿太大。
 
-### 120.tall [行] 高的
+### 120.tall [形] 高的
 tall tree. 高的树
 He is tall and thin. 他又高又瘦
 
-### 121.pretty [副] 很；箱单 [行] 漂亮的
-That guy dates a prettu girl. 那家伙和一个漂亮女孩约会
+### 121.pretty [副] 很；箱单 [形] 漂亮的
+That guy dates a pretty girl. 那家伙和一个漂亮女孩约会
 - 串记
 petty 小气的
 
@@ -162,7 +162,7 @@ Christmas tree  圣诞树
 ### 142.Father Christmas [名] 圣诞老人
 Father Christmas brings presents to children. 圣诞老人给孩子们带来礼物
 
-### 143.Chistmas tree [短语] 圣诞树
+### 143.Christmas tree [短语] 圣诞树
 
 ### 144.card [名] 卡片；纸牌；银行卡
 bank card 银行卡
