--- a/primary school/08.md
+++ b/primary school/08.md
@@ -25,3 +25,141 @@ rob a bank 抢劫银行
 grocery bag 食品杂货袋
 He began to operate a small grocery. 他开始经营一家小杂货店
 
+### 442.turn left [短语] 左转
+Go along the street and turn left. 沿这条街向前走然后向左转
+
+### 443.turn right [短语] 向右转
+Turn right at the next corner. 在下一个拐角处向右转
+
+### 444.go straight [短语] 执行
+Turn to the right and go straight  右转，然后直走
+
+### 445.crossroads [名] 十字路口
+There is a bookstore at the crossroads. 十字路口处有一家书店
+
+### 446.neighbourhood [名] 街坊；四邻；街道；附近地区
+The fire alarmed the whole neighbourhood.  火灾使整个街坊邻里都惊恐起来
+
+### 447.send [动] 发送；送；寄
+Please send me a post card. 请给我寄张明信片
+We will send the goods by railroad. 我们将用铁路发送货物
+
+### 448.get [动] 得到；获得；使；收到；变得
+Did you get me? 你明白我的意思了吗？
+Get on  上车
+
+### 449.money [名] 钱；金钱
+Money doesn't buy happiness. 金钱买不来幸福
+I want to borrow some money. 我想借一些钱
+
+### 450.get to [短语] 到达；开始
+get to work 开始工作
+Did we get to the zoo? 我们到动物园了吗？
+
+### 451.before [介] 在...之前；先于  [副] 以前；之前  [连] 在...以前
+I have seen the film before. 我以前看过这部电影
+He arrived before me. 他比我到的早
+
+### 452.leave [动] 离开；离去；留下  [名] 休假
+Leave me alone! I am busy. 别打扰我！我很忙。
+Would you please leave? 请你离开好吗？
+
+### 453.toy [名] 玩具 [动] 玩弄
+toy car 玩具车
+play with a toy 玩玩具
+
+### 454.city [名] 城市
+a modern city 一座现代化城市
+I live in the west of the city. 我住在该城市的西部
+
+### 455.sports centre [短句]体育运动中心；体育馆
+The new sports centre will open soon. 新的运动中心即将开放
+
+### 456.hotel [名] 旅馆；酒店；饭店
+We stayed at a small hotel. 我们住在一家小旅馆里
+I would like to book a room in your hotel. 我想在你们的酒店定一个房间。
+
+### 457.square [名] 平方；正方形；四方形；广场  [动]使成平方；与...一致  [形] 正方形；四方形；成直角的；平方的  [副] 成直角地
+The road turned square to the left. 这条路成直角向左转去。
+
+### 458.buy toys [短语] 买玩具
+How often do you buy toys? 你多久买一次玩具？
+I want to buy toys on Sunday. 我想在周日买些玩具
+
+### 459.see a film [短语] 看电影
+In the evening we went to see a film. 晚上我们去看了一场电影
+I go to see a film once a week. 我每周看一场电影
+
+### 460.go boating [短语] 去划船
+Let's go boating on the lake. 我们去湖上划船吧
+We are going boating. 我们准备去划船
+
+### 461.busy [形] 忙碌的；忙于
+The traffic is busy. 交通繁忙
+I'm busy and don't bother me. 我正忙着，不要打扰我
+
+### 462.station [名] 车站；站
+He drove me to the station 他开车送我去车站
+Will you meet her at the station? 你到车站去见她吗
+a bus station 公共汽车站
+
+### 463.place [名] 地方；方位  [动] 安置；安放
+What is this place called? 这个地方叫什么
+Put the book back in the right place. 把书放回原处
+
+### 464.thing [名] 东西；事情
+big thing 大事件；热门事件
+bad thing 坏东西；坏事
+
+### 465.stay [动] 停留；保持  [名] 停留；逗留
+stay at home 待在家里
+stay with us 留下来，跟我们一起
+
+### 466.star [名]星；恒星；明星
+The star is bright. 这颗星星很明亮
+movie star 电影明星
+### 467.king [名] 国王
+the king and the queen 国王和王后
+The lion is called the king of beasts. 狮子号称百兽之王
+
+### 468.central [形] 中央的；中心的
+central figure 中心人物
+My house is very central 我家非常靠近市中心
+
+### 469.take photos [短语] 拍照片
+Can I take photos of flowers? 我可以拍花的照片吗？
+Can I take photos with you? 我可以和你拍照吗？
+
+### 470.museum [名] 博物馆
+visit a museum 参观博物馆
+There are some butterfiy specimens in the museum. 那家博物馆里有一些蝴蝶标本
+
+### 471.dream [名] 梦；梦想  [动]梦想；做梦
+My dream is to be an astronaut. 我的理想是当宇航员
+
+### 472.sea [名] 海；海洋
+flow into the sea. 流入大海
+Rivers flow into the sea. 江河流入海中
+
+### 473.ski [动]滑雪
+I like winter because I like to ski. 我喜欢冬天，因为我喜欢滑雪
+to ski a mountain slope 滑过山坡
+
+### 474.eat seafood [短语] 吃海鲜
+I like to eat seafood 我喜欢吃海鲜
+
+### 475.West Lake [名] 西湖
+West Lake is in Hang Zhou
+西湖在杭州
+
+### 476.row a boat [短语]划船
+Do you know how to row a boat? 你会划船吗
+
+### 477.the Great Wall [名] 长城
+The Great Wall is one of the sights of the world. 长城是世界名胜之一
+
+### 478.summer vacation [短语] 暑假
+The long summer vacation is over. 漫长的暑假结束了
+
+### 479.travel [动] [名] 旅游；旅行
+to travel on the ship 乘轮船旅行
