--- a/primary school/08.md
+++ b/primary school/08.md
@@ -163,3 +163,81 @@ The long summer vacation is over. 漫长的暑假结束了
 
 ### 479.travel [动] [名] 旅游；旅行
 to travel on the ship 乘轮船旅行
+
+### 480.reading [名] 阅读；读物 [动]读；"read"的现在分词
+The machine gave a faulty reading.  机器显示错误读数
+Reading makes me happy. 阅读使我快乐
+
+### 481.skateboarding [名] 滑板运动
+I'm not very good at skateboarding. 我对滑板运动不太擅长
+Do you enjoy skateboarding? 你喜欢玩滑板吗？
+
+### 482.singing [名] 唱歌  [形] 唱歌的；音乐般的  [动] 唱歌；演唱；“sing”的现在分词
+a singing star  歌星
+He has a wide range of singing voices. 他的歌声音域宽广
+
+### 483.dancing [名] 跳舞；舞蹈  [动] 跳舞；“dance”的现在分词
+go dancing 去跳舞
+
+### 484.doing jigsaw puzzles [短语] 做拼图游戏
+The kids are doing jigsaw puzzles. 孩子们在做拼图游戏
+We like doing jigsaw puzzles. 我们喜欢玩拼图游戏
+
+### 485.making models [短语] 制作模型
+The students are making models in the class. 学生们在课上制作模型
+
+### 486.collecting erasers  [短语] 收集橡皮擦
+Collecting erasers is my hobby. 收集橡皮擦是我的爱好
+
+### 487.different [形] 不同的
+The tow clouds have different shapes. 这两朵云有不同的形状
+
+### 488.hobby [名] 爱好
+sports hobby  体育爱好
+Collecting coins is his hobby  收集硬币是他的爱好
+
+### 489.stamp [名] 邮票；印记；跺脚  [动] 盖印；跺脚
+to stamp the floor 跺地板
+I stuck a stamp on the letter. 我把一张邮票贴在信上
+
+### 490.catch [动] 捕捉；接住；抓住；赶上；得病；理解  [名] 捕捉；搭扣；钩；抛接球游戏
+Did you catch my idea? 你懂得我的意思吗？
+The song began to catch on. 这首歌开始变得流行
+
+### 491.go for a picnic [短语] 去野餐
+They will go for a picnic next weekend. 他们下个周末将去野餐
+It's a nice day.Let's go for a picnic. 天气不错；咱们去野餐吧
+
+### 492.play the violin [短语] 拉小提琴
+Can he play the violin? 他会拉小提琴
+You play the violin very well. 你拉小提琴拉得棒极了
+
+### 493.go skating [短语] 去滑冰；去溜冰
+It is cold enough for us to go skatiog. 天气够冷的，可以滑冰了
+Let's go skating  我们一起去溜冰吧
+
+### 494.go camping [短语] 去露营
+We are going to go camping next Saturday. 我们周六去露营
+
+### 495.do the housework  [短语] 做家务
+The girl had to do the housework by herself. 这女孩得自己做家务
+
+### 496. free [形] [副] 自由的；免费的  [动] 释放
+be free of charge 免费
+This is a free country. 这是一个自由的国家
+
+### 497.never [副] 从未；决不
+Never mind! 不要紧
+I have never been there. 我从未到过那里
+
+### 498.once a week [短语] 每周一次
+I go fishing once a week  我每周钓一次鱼
+We have English class once a week  我们每周一次英语课
+
+### 499.twice a week [短语] 一周两次
+I play tennis twice a week 我一星期打两次网球
+I swim twice a week  我一周游两次泳
+
+### 500.three times a week [短语] 一周三次
+We have English classes three times a week. 我们一周上三次英语课
+
