--- a/primary school/08.md
+++ b/primary school/08.md
@@ -241,3 +241,37 @@ I swim twice a week  我一周游两次泳
 ### 500.three times a week [短语] 一周三次
 We have English classes three times a week. 我们一周上三次英语课
 
+### 501.Canada [名] 加拿大
+She went to Canada  她去了加拿大
+She studied in Canada  她曾在加拿大求学
+
+### 502.Australia [名]澳大利亚；澳洲
+import wool from Australia  从澳大利亚进口羊毛
+
+### 503.China [名] 中国
+Beijing is the capital of China. 北京是中国的首都
+made in China  中国制造
+
+### 504.koala [名] 树袋熊；考拉熊；无尾熊
+The koala is from Australia. 树袋熊来自澳大利亚
+
+### 505.maple leaves [短语] 枫叶
+Maple leaves become red in autumn. 枫叶在秋天变红
+
+### 506.Big Ben [名] 大本钟
+In London we will go and see Big Ben. 到了伦敦，我们要去看大本钟。
+
+### 507.Disneyland [名] 迪斯尼乐园
+Have you ever been to Disneyland? 你去过迪斯尼乐园
+
+### 508.campfire [名] 营火；篝火
+They were singing around the campfire last night. 他们昨晚围着篝火唱歌
+
+### 509.cute [形] 可爱的
+a cute boy 一个可爱的男孩
+Your baby is so cute. 你的宝宝真可爱
+
+### 510.country [名] 国家
+He was once the ruler of the country.
+他曾经是这个国家的统治者
+
